static/styles/mdp.scss
/* ... */
// Elements that Add space at bottom of some pages
.hidden_space_bottom{ display: none;}

// Button that close wizard modal
.wizard__close{
  z-index: 20000000;
  cursor: pointer;
  position: absolute; top:0%; right: 5%;
  .chatbot & {display:none;}
}


// mobile styles


@media all and(max-width: $md){
  .chatbot_section { position:absolute!important; bottom:70px!important; }
  .hidden_space_bottom{ display: block; height: 70px;}
  footer {
    min-height: 70px;
    a { line-height: 1.8rem; }
    .footer__copy { padding:0 10%; text-align: center;}
  }
  .row--mobile-padding { padding :0 3%;}
}
@media all and(max-width: $sm){

  footer {position:relative!important; bottom:0!important; height: 70px!important;}
  .mobile__padding{ padding-left: 2%!important; padding-right: 2%!important; }
  .no-mobile {display: none!important;}
  .row--mobile { margin-left:0!important; margin-right:0!important;}

  .modal, .modal-dialog, .modal-content, .modal-body{
    width:100vw!important;
    height:100%;
    position:absolute;top:0;right:0;bottom:0;left:0;

    margin:0!important;
    padding:0!important;
  }

  .modal {
    wizard { flex-grow: 2; }
    *:not(.slick-track) { max-height: 100vh!important;}
    .moment-picker-container {
      font-size: 0.8em;
      min-width: auto;
    }
  }

  // Disable scrollbar
  ::-webkit-scrollbar {
    display: none;
  }

  // Fix padding on homepage
  entity-carousel {& > * {max-width: 100vw;} }


}

.cc-window {z-index: 900000000000!important;}

